Добавлены проект пользовательского интерфейса и проект бизнес-логики, реализовано удаление знаков препинания, задаваемых пользователем.

--- a/TextReaderUI/TextReaderUI/TextReaderUI.csproj
+++ b/TextReaderUI/TextReaderUI/TextReaderUI.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TextReader\TextReader.csproj">
+      <Project>{fd193d1c-181a-438e-892d-6363f47d8f18}</Project>
+      <Name>TextReader</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
