Написаны Unit-тесты для тестирования проекта бизнес-логики (тесты пройдены успешно).

--- a/TextReaderUI/TextReaderUnitTest/TextReaderUnitTest.csproj
+++ b/TextReaderUI/TextReaderUnitTest/TextReaderUnitTest.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TextReader\TextReader.csproj">
+      <Project>{fd193d1c-181a-438e-892d-6363f47d8f18}</Project>
+      <Name>TextReader</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
